--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pandas>=2.0.0
-plotly>=5.17.0
+seaborn>=0.13.0
+matplotlib>=3.7.0
 openpyxl>=3.1.0
 numpy>=1.24.0
+geopandas>=0.14.0
+squarify>=0.4.3
